--- a/site/styles/generatedresult.module.css
+++ b/site/styles/generatedresult.module.css
@@ -5,21 +5,22 @@
   background-color: #fff;
   border-radius: 4px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  padding: 20px;
 }
 
 .title {
   color: black;
+  font-size: 40px;
+}
+.header {
+  padding: 10px;
+  font-size: 40px;
+  text-align: center;
+  color: white;
 }
 
 .text {
-  flex-basis: 100px;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 1.5;
+  font-size: 25px;
   margin-right: 10px;
-  text-align: right;
-  width: 100px;
   color: black;
 }
 
@@ -32,4 +33,14 @@
   font-size: 18px;
   padding: 10px;
   margin-right: 10px;
+  margin-top: 10px;
+}
+.tweetContainer {
+  margin: 0 auto;
+  max-width: 600px;
+  padding: 60px;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 40px;
 }
