--- a/site/styles/askelon.module.css
+++ b/site/styles/askelon.module.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #1DA1F2;
-    height: 50px;
+    height: 90px;
     padding: 0 20px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   }
@@ -14,4 +14,12 @@
     color: white;
     margin: 0;
   }
-  
+  .footer {
+    font-size: 24px;
+    color: white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem; 
+    text-align: center;
+  }
